# serde_many

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: ast.rs  attrs.rs  expand.rs  lib.rs
src/: adapter.rs  lib.rs
tests/: compiletest.rs  derive.rs
tests/ui/: no_markers.rs  no_markers.stderr  no_serde_many_declaration.rs  no_serde_many_declaration.stderr  unknown_marker_name.rs  unknown_marker_name.stderr  unknown_marker_name_nested.rs  unknown_marker_name_nested.stderr
