[package]
name = "serde_many_derive"
version = "0.1.0"
edition = "2021"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "serialization", "no_std", "derive"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/yogevm15/serde_many"
authors = ["Maayan Yogev <yogevm15@gmail.com>"]
description = "Macros implementation of #[derive(SerializeMany, DeserializeMany)]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "proc-macro", "visit-mut", "visit"] }
quote = "1.0"
proc-macro2 = "1.0.89"
serde_derive_internals = "0.29"
